# Misc

./: .gitignore  AffineGapMatrixVisGen.ipynb  FWHM_1D.py  README.md  Untitled.ipynb  Word Scraper.ipynb  beam_overlap.py  conda_updates.py  csv_data_plotting.py  find_dependencies.py  header_update.py  hyperpolsym.py  liouville_pathways.py  raspicomm.py  sig_idl_arr_gen.py  sig_to_idl.py  w3_motortune.py  wt_fwhm.py
bioinformatics/: README.md
bioinformatics/notebooks/: AffineGapMatrixVisGen.ipynb
chemistry/: README.md  mol_viewer.py
jupyter_notebooks/: 10DOT1126SLASHscisignalDOT2000475.ipynb  AAindex_play.ipynb  DistributionZscoreHistPlay.ipynb  ElementalAnalysis.ipynb  FWHM-1D.ipynb  Koina API test.ipynb  MoleculeVis.ipynb  NMR_splitting_sim.ipynb  Overlap area of columnated beams.ipynb  Untitled.ipynb  Yareslie.py  groups  laser_layer_propagation.ipynb  matrix_optics.ipynb  pyteomics_play.ipynb  scipy_ndimage_rotate_variance.ipynb
jupyter_notebooks/Proteomics/: Disassembly Sequence Optimization key steps.py  JadeOccupancySampleDataset.ipynb  MinSetTrypticPeptideMostHumanProteomeCoverage.ipynb  RandomMSPlay.ipynb  Untitled.ipynb  detectability_test.ipynb  get_koina_model_inputs.ipynb  main.py  peptide_search_mod_stoich.ipynb  pgoccupancyparsing.ipynb  psmsToOccupancies.ipynb  psmsToOccupancies_overview.docx  psmsToOccupancies_summary.docx  pyproject.toml
jupyter_notebooks/Proteomics/TestRunShortreedMSLReader/: Untitled.ipynb  msl_reader.py
sandbox/: README.md
spectroscopy/: README.md  mqtt_matplotlib_logger.py
utilities/: README.md  imgtopdf.py
(+19 files in other folders)
