[project]
name = "proteomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "koinapy>=0.0.10",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyteomics>=4.7.5",
    "scikit-learn>=1.8.0",
]
